--- a/Tarefinha_de_casa_1.ipynb
+++ b/Tarefinha_de_casa_1.ipynb
@@ -57,7 +57,7 @@
         },
         "outputId": "67cf9a50-ca53-41d0-a794-d9dafa57e31d"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,7 +96,7 @@
         },
         "outputId": "9d45a79c-714e-48f4-b2b5-377fc53aa25a"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,7 +144,7 @@
         },
         "outputId": "950e31dd-6450-496c-b200-53c3dc3db111"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -176,13 +176,18 @@
       "cell_type": "code",
       "source": [
         "#resposta\n",
-        "lista_de_alimentos_com_preco = ['arroz', 4.0,'feijão', 5.5, 'cuscuz', 2.5, 'bolo', 15.0, 'tomate', 3.5, 'peixe', 10.0, 'macarrão', 3.0, 'manga', 6.0, 'uva', 5.0, 'cenoura', 4.0]\n",
+        "lista_de_alimentos_com_preco = ['arroz', 4.0,'feijão', 5.5, 'cuscuz', 2.5, 'bolo', 15.0, 'tomate', 3.5, 'peixe', 10.0, 'macarrão', 3.0, 'manga', 6.0,\n",
+        "                                'uva', 5.0, 'cenoura', 4.0]\n",
         "#item a\n",
-        "gasto_total = lista_de_alimentos_com_preco[1] + lista_de_alimentos_com_preco[3] + lista_de_alimentos_com_preco[5] + lista_de_alimentos_com_preco[7] + lista_de_alimentos_com_preco[9] + lista_de_alimentos_com_preco[11] + lista_de_alimentos_com_preco[13] + lista_de_alimentos_com_preco[15] + lista_de_alimentos_com_preco[17] + lista_de_alimentos_com_preco[19]\n",
+        "gasto_total = (lista_de_alimentos_com_preco[1] + lista_de_alimentos_com_preco[3] + lista_de_alimentos_com_preco[5] + lista_de_alimentos_com_preco[7] + \n",
+        "lista_de_alimentos_com_preco[9] + lista_de_alimentos_com_preco[11] + lista_de_alimentos_com_preco[13] + lista_de_alimentos_com_preco[15] + \n",
+        "lista_de_alimentos_com_preco[17] + lista_de_alimentos_com_preco[19])\n",
         "#item b\n",
         "print(gasto_total)\n",
         "#item c\n",
-        "alimentos_mais_caros = [lista_de_alimentos_com_preco[6],lista_de_alimentos_com_preco[7],lista_de_alimentos_com_preco[10],lista_de_alimentos_com_preco[11],lista_de_alimentos_com_preco[14],lista_de_alimentos_com_preco[15]]\n",
+        "alimentos_mais_caros = [lista_de_alimentos_com_preco[6],lista_de_alimentos_com_preco[7],\n",
+        "                        lista_de_alimentos_com_preco[10],lista_de_alimentos_com_preco[11],\n",
+        "                        lista_de_alimentos_com_preco[14],lista_de_alimentos_com_preco[15]]\n",
         "#item d\n",
         "print(alimentos_mais_caros)\n"
       ],
@@ -191,7 +196,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "440e42f2-3139-40e8-f2d7-6b58898721e6"
+        "outputId": "0d83b401-a05a-42fa-b13a-39480395d0e0"
       },
       "execution_count": 3,
       "outputs": [
@@ -250,7 +255,7 @@
         },
         "outputId": "186fa00c-f164-41d5-f0ce-bc022ed70467"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -300,7 +305,7 @@
         "id": "M1JDPkyIDGbl",
         "outputId": "c738fd1c-ca23-4da5-aded-b78ec11df0f3"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -336,7 +341,7 @@
         "id": "zb7x7blPG2E1",
         "outputId": "d565a0f1-652a-4bcc-ca1b-a7a756842181"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
