--- a/Tarefinha_de_casa_1.ipynb
+++ b/Tarefinha_de_casa_1.ipynb
@@ -44,7 +44,7 @@
         "nota3 = 9.5\n",
         "media = 9.0\n",
         "#exibição da variável media\n",
-        "print(media) \n",
+        "print(aluno, media) \n",
         "#exibição do tipo da variavel aluno\n",
         "print(type(aluno))\n",
         "#exibição do tipo da variavel media\n",
@@ -55,15 +55,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "67cf9a50-ca53-41d0-a794-d9dafa57e31d"
+        "outputId": "c5e4405c-3fd8-4de3-951c-86c0a6b99c14"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "9.0\n",
+            "Adrielly 9.0\n",
             "<class 'str'>\n",
             "<class 'float'>\n"
           ]
@@ -198,7 +198,7 @@
         },
         "outputId": "0d83b401-a05a-42fa-b13a-39480395d0e0"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
