--- a/Tarefinha_de_casa_1.ipynb
+++ b/Tarefinha_de_casa_1.ipynb
@@ -131,20 +131,20 @@
         "#item b\n",
         "print(lista_de_alimentos[3])\n",
         "#item c\n",
-        "print(lista_de_alimentos[:4])\n",
+        "print(lista_de_alimentos[:5])\n",
         "#item d\n",
-        "print(lista_de_alimentos[6:])\n",
+        "print(lista_de_alimentos[7:])\n",
         "#item e\n",
-        "print(lista_de_alimentos[1:6])"
+        "print(lista_de_alimentos[2:6])"
       ],
       "metadata": {
         "id": "Ej916hE4x3vr",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "950e31dd-6450-496c-b200-53c3dc3db111"
+        "outputId": "753e67e9-6b92-4783-b5ab-fc7f8e2f0708"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -152,9 +152,9 @@
           "text": [
             "cenoura\n",
             "bolo\n",
-            "['arroz', 'feijão', 'cuscuz', 'bolo']\n",
-            "['macarrão', 'manga', 'uva', 'cenoura']\n",
-            "['feijão', 'cuscuz', 'bolo', 'tomate', 'peixe']\n"
+            "['arroz', 'feijão', 'cuscuz', 'bolo', 'tomate']\n",
+            "['manga', 'uva', 'cenoura']\n",
+            "['cuscuz', 'bolo', 'tomate', 'peixe']\n"
           ]
         }
       ]
@@ -237,7 +237,7 @@
         "#item b\n",
         "print(lista3)\n",
         "#item c\n",
-        "lista2a4 = lista_de_alimentos_adaptada[1:4]\n",
+        "lista2a4 = lista_de_alimentos_adaptada[1:3]\n",
         "print(lista2a4)\n",
         "#item d1\n",
         "print(lista_de_alimentos_adaptada[2][1])\n",
@@ -253,16 +253,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "186fa00c-f164-41d5-f0ce-bc022ed70467"
+        "outputId": "1eb1b048-e3f5-491b-aa3a-fef821e57e05"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "['peixe', 10.0]\n",
-            "[['bolo', 15.0], ['peixe', 10.0], ['macarrão', 3.0]]\n",
+            "[['bolo', 15.0], ['peixe', 10.0]]\n",
             "10.0\n",
             "macarrão\n",
             "5.0\n",
