--- a/Tarefinha_de_casa_1.ipynb
+++ b/Tarefinha_de_casa_1.ipynb
@@ -237,7 +237,7 @@
         "#item b\n",
         "print(lista3)\n",
         "#item c\n",
-        "lista2a4 = lista_de_alimentos_adaptada[1:3]\n",
+        "lista2a4 = lista_de_alimentos_adaptada[1:4]\n",
         "print(lista2a4)\n",
         "#item d1\n",
         "print(lista_de_alimentos_adaptada[2][1])\n",
@@ -253,16 +253,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1eb1b048-e3f5-491b-aa3a-fef821e57e05"
+        "outputId": "6797a225-ed6c-4808-e447-3c75c25cde2c"
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "['peixe', 10.0]\n",
-            "[['bolo', 15.0], ['peixe', 10.0]]\n",
+            "[['bolo', 15.0], ['peixe', 10.0], ['macarrão', 3.0]]\n",
             "10.0\n",
             "macarrão\n",
             "5.0\n",
