--- a/Tarefinha_de_casa_1.ipynb
+++ b/Tarefinha_de_casa_1.ipynb
@@ -57,7 +57,7 @@
         },
         "outputId": "c5e4405c-3fd8-4de3-951c-86c0a6b99c14"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,16 +135,16 @@
         "#item d\n",
         "print(lista_de_alimentos[7:])\n",
         "#item e\n",
-        "print(lista_de_alimentos[2:6])"
+        "print(lista_de_alimentos[2:7])"
       ],
       "metadata": {
         "id": "Ej916hE4x3vr",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "753e67e9-6b92-4783-b5ab-fc7f8e2f0708"
+        "outputId": "66c21a25-36c4-413b-a1cd-784abadb3cbe"
       },
-      "execution_count": 6,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -154,7 +154,7 @@
             "bolo\n",
             "['arroz', 'feijão', 'cuscuz', 'bolo', 'tomate']\n",
             "['manga', 'uva', 'cenoura']\n",
-            "['cuscuz', 'bolo', 'tomate', 'peixe']\n"
+            "['cuscuz', 'bolo', 'tomate', 'peixe', 'macarrão']\n"
           ]
         }
       ]
@@ -255,7 +255,7 @@
         },
         "outputId": "6797a225-ed6c-4808-e447-3c75c25cde2c"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
